# arcore_flutter_plugin

android/: build.gradle
android/opencv411/: build.gradle
android/opencv411/java/src/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  native-lib.cpp  nativeBridge.cpp  secondary.cpp
android/src/main/cpp/opencv/: data.cpp  data.hpp  matrixUtil.cpp  matrixUtil.hpp
android/src/main/cpp/opencv/cameraView/: bgErase.cpp  bgErase.hpp  cameraJBrdige.cpp  cppBridge.h  cppBridge.mm
android/src/main/cpp/opencv/editorView/: foregroundEditor.cpp  foregroundEditor.hpp  foregroundEditorBridge.h  foregroundEditorBridge.mm  foregroundEditorJBridge.cpp  layoutEditor.cpp  layoutEditor.hpp  layoutEditorBridge.h  layoutEditorBridge.mm  layoutEditorJBridge.cpp
android/src/main/cpp/opencv/nativeChannel/: nativeBridge.h  nativeBridge.mm  nativeExec.cpp  nativeExec.hpp  nativeJBridge.cpp
android/src/main/cpp/opencv/testUtil/: testUtil.cpp  testUtil.hpp  testUtilJBridge.cpp
android/src/main/kotlin/com/difrancescogianmarco/arcore_flutter_plugin/: ARCoreSessionConfig.kt  ArCoreFaceView.kt  ArCoreView.kt  ArCoreViewFactory.kt  ArcoreFlutterPlugin.kt  MaterialCustomFactory.kt  NodeFactory.kt  RenderableCustomFactory.kt  VideoNode.kt
android/src/main/kotlin/com/difrancescogianmarco/arcore_flutter_plugin/flutter_models/: FlutterArCoreMaterial.kt  FlutterArCoreNode.kt  FlutterArCorePose.kt  FlutterArCoreShape.kt
android/src/main/kotlin/com/difrancescogianmarco/arcore_flutter_plugin/models/: ARReferenceImage.kt  NurieParams.kt  SpecialMarker.kt
android/src/main/kotlin/com/difrancescogianmarco/arcore_flutter_plugin/opencv/: TestUtil.kt  (+1 more)
android/src/main/res/raw/: chroma_key_video.sfb  slate.sfb
example/: pubspec.yaml
example/android/: build.gradle  settings.gradle
example/android/app/: build.gradle
example/android/app/sampledata/: slate.mat
example/android/app/src/main/assets/: ArcticFox_Posed.sfb  TocoToucan.sfb
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: home.dart
example/lib/screens/: assets_object.dart  auto_detect_plane.dart  custom_object.dart  hello_world.dart  remote_object.dart  runtime_materials.dart
lib/: arcore_flutter_plugin.dart
lib/src/: arcore_anchor.dart  arcore_android_view.dart  arcore_controller.dart  arcore_face_view.dart  arcore_marker.dart  arcore_node.dart  arcore_pose.dart  arcore_reference_node.dart  arcore_sessionconfig.dart  arcore_video_node.dart  arcore_view.dart
lib/src/geometries/: arcore_box.dart  arcore_cylinder.dart  arcore_geometry.dart  arcore_material.dart  arcore_slate.dart  arcore_sphere.dart  artoolkit_box.dart  artoolkit_cylinder.dart  artoolkit_geometry.dart  artoolkit_material.dart  artoolkit_plane.dart  artoolkit_sphere.dart
lib/src/shape/: arcore_imageview.dart  arcore_videoview.dart
lib/src/utils/: vector_utils.dart
(+3 files in other folders)
